2008-11-27   D. V. Wiebe <getdata@ketiltrout.net>  svn:247
	* test/bzip_put.c test/bzip_get_get.c test/bzip_nframes.c test/bzip_get.c:
	Added.

	* m4/encodings.m4: Always AC_SUBST the Makefile variables.  Differentiate
	between internal and external encodings.

	* src/bzip.c: Added.
	* src/encoding.c: Add bzip2 framework.

	* src/gzip.c (_GD_GzipSeek): Return samples not bytes.

	* src/configure.ac: Add --enable-modules w/ checks.
	* src/Makefile.am: Add rules for USE_MODULES
	* src/encoding.c: Initialise encoding framework for USE_MODULES
	* src/open.c (dirfile_cbopen) src/close.c (dirfile_close) src/slim.c
	src/gzip.c src/encoding.c: Wrap ltdl stuff in USE_MODULES

2008-11-25   D. V. Wiebe <getdata@ketiltrout.net>  svn:246
	* m4/encoding.m4: Check for executables needed for tests even if the
	library isn't found.
	* test/slim_nframes.c test/slim_get.c test/gzip_get_get.c test/gzip_get.c
	test/gzip_nframes.c: Allow proper execution in the absence of the
	corresponding encoding support.

2008-11-25   D. V. Wiebe <getdata@ketiltrout.net>  svn:244
	* configure.ac: Reduce code duplication with the introduction of the
	GD_CHECK_ENCODING macro.
	* m4/encoding.m4: Added.

	* src/common.c: Replaced the only assert() in the library with an internal
	library error.
	* configure.ac src/internal.h: Removed assert-related checks.

2008-11-24   D. V. Wiebe <getdata@ketiltrout.net>  svn:243
	* configure.ac: Fix pthread check.

2008-11-24   D. V. Wiebe <getdata@ketiltrout.net>  svn:242
	* src/encoding.c (_GD_ValidateField): Moved from open.c because it needs the
	global encoding framework array.
	* src/internal.h: Add local encoding framework array to DIRFILE struct.
	Most functions now use this. (GD_SetEncodedName is a notable exception.)
	* src/encoding.c (_GD_InitialiseFramework): Added.
	* test/gzip_get_get: Added.

	* src/encoding.c (_GD_ResolveSymbol _GD_MissingFramework): Use ltdl to
	dynamically load libraries instead of calling dlopen directly.