@@ -1,0 +1,68 @@
+.\" dirfilename.3.  The dirfilename man page.
+.\"
+.\" (C) 2008 D. V. Wiebe
+.\"
+.\""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+.\"
+.\" This file is part of the GetData project.
+.\"
+.\" This program is free software; you can redistribute it and/or modify
+.\" it under the terms of the GNU General Public License as published by
+.\" the Free Software Foundation; either version 2 of the License, or
+.\" (at your option) any later version.
+.\"
+.\" GetData is distributed in the hope that it will be useful,
+.\" but WITHOUT ANY WARRANTY; without even the implied warranty of
+.\" MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+.\" General Public License for more details.
+.\"
+.\" You should have received a copy of the GNU General Public License along
+.\" with GetData; if not, write to the Free Software Foundation, Inc.,
+.\" 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+.\"
+.TH dirfilename 3 "27 November 2008" "Version 0.5.0" "GETDATA"
+.SH NAME
+dirfilename \(em retrieve the name of a dirfile
+.SH SYNOPSIS
+.B #include <getdata.h>
+.HP
+.nh
+.ad l
+.BI "int dirfilename(const DIRFILE *" dirfile );
+.hy
+.ad n
+.SH DESCRIPTION
+The
+.BR dirfilename ()
+function queries a dirfile(5) database specified by
+.I dirfile
+and returns its name.  The name of a dirfile is the pathname passed to
+.BR dirfile_cbopen ()
+or
+.BR dirfile_open ()
+when the dirfile was opened.
+
+The 
+.I dirfile
+parameter must point to a valid DIRFILE object previously created by a call to
+.BR dirfile_open (3).
+
+.SH RETURN VALUE
+Upon successful completion,
+.BR dirfilename ()
+returns a pointer to a constant string containing the pathname of the dirfile.
+On error, 
+.BR dirfilename ()
+returns NULL and sets the dirfile error to a non-zero value.  Possible error
+values are:
+.TP 8
+.B GD_E_BAD_DIRFILE
+The supplied dirfile was invalid.
+.P
+The dirfile error may be retrieved by calling
+.BR get_error (3).
+A descriptive error string for the last error encountered can be obtained from
+a call to
+.BR get_error_string (3).
+.SH SEE ALSO
+.BR dirfile_cbopen (3)
